--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config ./webpack.config.js --mode development",
+    "start": "webpack serve --config webpack.development.config.js --mode development",
+    "build": "webpack --config webpack.production.config.js --mode production",
+    "start-prod": "npm run-script build && npx http-server dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,9 +15,11 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@gfx/zopfli": "^1.0.15",
     "babel-loader": "^8.2.2",
+    "compression-webpack-plugin": "^7.1.2",
     "css-loader": "^5.0.1",
-    "mini-css-extract-plugin": "^1.3.5",
+    "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
