--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-breadcrumbs-hoc": "^3.3.1",
     "react-router-dom": "^5.2.0"
   }
 }
